packages/compiler/test/errors/temporal-dead-zone/compound-assignment-before-decl/code.js
function f() {
  x += foo();
  let x = 0;
}
